--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 click==6.7
+elasticsearch==5.0.1
 Flask==0.12
+funcsigs==1.0.2
 gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8.1
 MarkupSafe==0.23
+mock==2.0.0
+pbr==1.10.0
 pymongo==3.4.0
 PyYAML==3.12
+six==1.10.0
+urllib3==1.19.1
 Werkzeug==0.11.15
